fix: fix issue with comments loading after posting new
- added username to blog entry page
- fixed issue with new comment not showing after creation

--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,12 @@ input[type=submit] {
 
 }
 
+.blog-username {  
+    color: #999;
+    font-weight: italic;
+
+}
+
 .blog-content {
     margin-top: 5px;
 }
